--- a/AutoLayoutConstraints/Base.lproj/Main.storyboard
+++ b/AutoLayoutConstraints/Base.lproj/Main.storyboard
@@ -22,21 +22,39 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J1X-py-VvI">
+                                <rect key="frame" x="95.333333333333329" y="485.66666666666669" width="211.33333333333337" height="10"/>
+                                <color key="backgroundColor" red="1" green="0.72376734500642992" blue="0.90214988020525611" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="4BB-2f-g8f"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNi-c7-ZBQ">
+                                <rect key="frame" x="334" y="124" width="52" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="gear" catalog="system"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="J1X-py-VvI" firstAttribute="centerX" secondItem="OYk-Ph-iBD" secondAttribute="centerX" id="G1M-Gb-aCc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TNi-c7-ZBQ" secondAttribute="trailing" constant="16" id="WFW-7a-GZb"/>
+                            <constraint firstItem="TNi-c7-ZBQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="gOv-YP-79L"/>
+                            <constraint firstItem="J1X-py-VvI" firstAttribute="top" secondItem="OYk-Ph-iBD" secondAttribute="bottom" constant="10" id="jqR-8e-3jA"/>
                             <constraint firstItem="OYk-Ph-iBD" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="om2-8b-NsH"/>
+                            <constraint firstItem="J1X-py-VvI" firstAttribute="width" secondItem="OYk-Ph-iBD" secondAttribute="width" multiplier="1.5" id="tUg-g3-rsb"/>
                             <constraint firstItem="OYk-Ph-iBD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yYh-HU-6Xy"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="19" y="4"/>
+            <point key="canvasLocation" x="17.910447761194028" y="3.432494279176201"/>
         </scene>
     </scenes>
     <resources>
+        <image name="gear" catalog="system" width="128" height="122"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
